test: Adding tests

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,14 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Planner App</title>
   <!-- favicon file -->
-  <link rel="icon" type="image/x-icon" href="/src/client/media/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./media/favicon.ico">
 </head>
 
 <body>
   <div id="app">
     <div class="ui-header">
       <div class="masthead">
-        <img class="app-icon" src="../../src/client/media/app-icon.png">
+        <img class="app-icon" src="./media/app-icon.png">
         <h1 class="app-name">Travel Planner</h1>
       </div>
       <div class="widget-area">
