fix: Store saved travel destinations on local server.
Previous implementation saved destination data in browser's
local storage.

--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -228,7 +228,7 @@ a {
 }
 
 #search-result {
-  .control-btns {
+  .btns-panel {
     .remove-btn {
       color: #f53649;
       cursor: pointer;
@@ -271,7 +271,7 @@ a {
     display: block;
     font-size: 16px;
     line-height: 1.4;
-    .control-btns {
+    .btns-panel {
       display: inline;
       margin-top: 0.5em;
     }
