--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -49,10 +49,20 @@
       </div>
       <div class="ui-footer">
         <!-- The Scroll to the Top button when clicked returns the user to the top of the page -->
-        <button id="scroll-to-top" title="Scroll to top" role="button"><i class="fa fa-chevron-up" aria-hidden="true"></i>
+        <button id="scroll-to-top" title="Scroll to top" role="button"><i class="fa fa-chevron-up"
+            aria-hidden="true"></i>
         </button>
       </div>
     </div>
+    <script>
+      // Check that service workers are supported
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js');
+        });
+      }
+    </script>
 </body>
 
 </html>
